linux-firmware-nitrux (0.2.8)  nitrux; urgency=medium

  * Remove lib/firmware/intel it will be a separate package.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 18 Dec 2024 17:46:00 -0500

linux-firmware-nitrux (0.2.7)  nitrux; urgency=medium

  * Don't remove .asc and .asm files.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 18 Dec 2024 17:23:00 -0500

linux-firmware-nitrux (0.2.6)  nitrux; urgency=medium

  * Add files up until commit 3f227859.
  * Delete unwanted files and directories from this package.
  * Fix URl in debian/control.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 18 Dec 2024 16:05:00 -0500

linux-firmware-nitrux (0.2.5-1)  nitrux; urgency=medium

  * Add files up until commit 3f227859. 
  * Add some directories to gitignore because they will be separate packages.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 18 Dec 2024 14:58:00 -0500

linux-firmware-nitrux (0.2.4)  nitrux; urgency=medium

  * Add files up until commit e1d95775. 

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 23 Oct 2024 04:02:00 -0500

linux-firmware-nitrux (0.2.3)  nitrux; urgency=medium

  * Add files up until commit c01656f9. 

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 10 Oct 2024 07:12:00 -0500

linux-firmware-nitrux (0.2.2)  nitrux; urgency=medium

  * Add files up until commit d4fee3a2. 

 -- Uri Herrera <uri_herrera@nxos.org>  Sat, 29 Jun 2024 21:01:00 -0500

linux-firmware-nitrux (0.2.1)  nitrux; urgency=medium

  * Add files up until commit 0b37116b. 

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 13 Jun 2024 20:34:00 -0500

linux-firmware-nitrux (0.2.0)  nitrux; urgency=medium

  * Add directory to gitignore.
  * Add files up until commit 90df68d2. 

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 09 Jun 2024 02:19:00 -0500

linux-firmware-nitrux (0.1.9)  nitrux; urgency=medium

  * Add directory to gitignore.

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 May 2024 15:44:00 -0500

linux-firmware-nitrux (0.1.8)  nitrux; urgency=medium
